--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -65,6 +65,10 @@ publisher:
 # parameters:
 #   excludettl: true
 #   validation: [allow-any-extensions, no-broken-links]
+parameters:
+  show-inherited-invariants: false
+  special-url: [urn:oid:1.2.208.184.100.9, urn:oid:2.16.840.1.113883.6.96, urn:oid:2.16.840.1.113883.6.1, urn:oid:1.2.208.184.100.1, urn:oid:1.2.208.176.2.4, urn:oid:1.2.208.176.2.1, urn:oid:1.2.208.176.7.3.1, urn:oid:1.2.208.184.100.10, urn:oid:1.2.208.176.8.1, urn:oid:2.16.840.1.113883.6.121, urn:oid:2.16.840.1.113883.5.79]
+
 #
 # ╭────────────────────────────────────────────menu.xml────────────────────────────────────────────╮
 # │ The menu property will be used to generate the input/menu.xml file. The menu is represented    │
