--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -5,11 +5,11 @@
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: medcom.fhir.dk.xds.metadata
 canonical: http://medcomfhir.dk/ig/xdsmetadata
-name: Terminology for XDS Metadata
-title: Terminology for XDS Metadata
+name: Danish profile of the XDS Metadata Standard
+title: Danish profile of the XDS Metadata Standard
 # description: Example Implementation Guide for getting started with SUSHI
 status: draft # draft | active | retired | unknown
-version: 0.96.5
+version: 1.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -80,6 +80,7 @@ parameters:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
+  Danish XDS Metadata profile v.1.0.0: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.0.0.html
   Artifacts: artifacts.html
   Downloads: downloads.html
 
