--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -81,6 +81,7 @@ parameters:
 menu:
   Home: index.html
   Danish XDS Metadata profile v.1.0.0: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.0.0.html
+  Roadmap: roadmap.html
   Artifacts: artifacts.html
   Downloads: downloads.html
 
