--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -6,13 +6,13 @@
 id: medcom.fhir.dk.xds.metadata
 canonical: http://medcomfhir.dk/ig/xdsmetadata
 name: Terminology for XDS Metadata
-title: Terminology for XDS Metadata
+title: Dk MedCom Terminology for XDS Metadata
 # description: Example Implementation Guide for getting started with SUSHI
-status: draft # draft | active | retired | unknown
+status: active # draft | active | retired | unknown
 version: 1.0.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
-releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: trial-use # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
