--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -6,7 +6,7 @@
 id: medcom.fhir.dk.xds.metadata
 canonical: http://medcomfhir.dk/ig/xdsmetadata
 name: Terminology for XDS Metadata
-title: Dk MedCom Terminology for XDS Metadata
+title: Dk Terminology for XDS Metadata
 # description: Example Implementation Guide for getting started with SUSHI
 status: active # draft | active | retired | unknown
 version: 1.0.0
