--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -12,13 +12,18 @@ status: draft # draft | active | retired | unknown
 version: 1.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
-releaseLabel: trial-use # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
   name: MedCom
   url: http://www.medcom.dk
-  # email: test@example.org
+contact:
+  - name: MedCom FHIR Team
+    telecom:
+      - system: email
+        value: fhir@medcom.dk
+        use: work
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
 # package id and the value is the version (or dev/current). For advanced
