--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -2,6 +2,7 @@ id: medcom.fhir.dk.xdsmetadata
 canonical: http://medcomfhir.dk/ig/xdsmetadata
 name: Terminology for XDS Metadata
 title: Dk Terminology for XDS Metadata
+description: MedCom Terminology for XDS Metadata
 status: active # draft | active | retired | unknown
 version: 1.0.1
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
