--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -14,7 +14,7 @@ publisher:
 
 parameters:
   show-inherited-invariants: false
-  special-url: [urn:oid:1.2.208.184.100.9, urn:oid:2.16.840.1.113883.6.96, urn:oid:2.16.840.1.113883.6.1, urn:oid:1.2.208.184.100.1, urn:oid:1.2.208.176.2.4, urn:oid:1.2.208.176.2.1, urn:oid:1.2.208.176.7.3.1, urn:oid:1.2.208.184.100.10, urn:oid:1.2.208.176.8.1, urn:oid:2.16.840.1.113883.6.121, urn:oid:2.16.840.1.113883.5.79]
+  special-url: [urn:oid:1.2.208.184.100.9, urn:oid:2.16.840.1.113883.6.96, urn:ad:dk:medcom:noah:action-categories, urn:oid:1.2.208.184.100.8, urn:oid:2.16.840.1.113883.6.1, urn:oid:1.2.208.184.100.1, urn:oid:1.2.208.176.2.4, urn:oid:1.2.208.176.2.1, urn:oid:1.2.208.176.7.3.1, urn:oid:1.2.208.184.100.10, urn:oid:1.2.208.176.8.1, urn:oid:2.16.840.1.113883.6.121, urn:oid:2.16.840.1.113883.5.79]
   apply-version: false
   default-version: true
 
