--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-medcom.fhir.dk.xdsmetadata.json
+ig = fsh-generated/resources/ImplementationGuide-medcom.dk.xdsmetadata.json
 template = https://github.com/hl7dk/medcom-ig-template
