--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,15 +3,15 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: medcom.fhir.dk.xdsmetadata
+id: medcom.dk.xdsmetadata
 canonical: http://medcomfhir.dk/ig/xdsmetadata
 name: Danish profile of the XDS Metadata Standard
 title: Danish profile of the XDS Metadata Standard
 # description: Example Implementation Guide for getting started with SUSHI
 status: draft # draft | active | retired | unknown
-version: 1.1.0
+version: 2.0.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
-copyrightYear: 2025+
+copyrightYear: 2026+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
@@ -81,9 +81,9 @@ menu:
   DK XDS Metadata profile:
     DK XDS Metadata profile 1.0.0: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.0.0.html
     DK XDS Metadata profile 1.0.1: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.0.1.html
-    DK XDS Metadata profile 1.1.0: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.1.0.html
-    DK XDS Metadata profile CDA example: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.1.0_cda.html
-    DK XDS Metadata profile ebXML example: XDS_Metadata_for_Document_Sharing_Danish_profile_v.1.1.0_ebxml.html
+    DK XDS Metadata profile 2.0.0: XDS_Metadata_for_Document_Sharing_Danish_profile_v.2.0.0.html
+    DK XDS Metadata profile CDA example: XDS_Metadata_for_Document_Sharing_Danish_profile_v.2.0.0_cda.html
+    DK XDS Metadata profile ebXML example: XDS_Metadata_for_Document_Sharing_Danish_profile_v.2.0.0_ebxml.html
   DK XDS Metadata Terminology: DK-IHE_Metadata-Value_sets.html
   Artifacts: artifacts.html
   More:
